se modifican las rutas de las imagenes

--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ nav a:hover{
 
 footer{
     text-align: center;
-    background: URL(imagenes/bg.jpg);
+    background: URL(bg.jpg);
     padding: 40px;
 }
 
